--- a/LearningOutcomes.html
+++ b/LearningOutcomes.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="components/footer/footer.css">
-    <link rel="stylesheet" href="components/PurpleSection/purpleSection.css">
-    <link rel="stylesheet" href="components/about/aboutSection.css">
     <link rel="stylesheet" href="components/hexagrid/hexagrid.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,47 +25,20 @@
             <nav>
                 <ul>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="LearningOutcomes.html">Learning Outcomes</a></li>
+                    <li class="current-page"><a href="LearningOutcomes.html">Learning Outcomes</a></li>
                     <li><a href="portfolio.html" class="portfolio-btn">Portfolio</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <section id="about" class="about">
-        <div class="about-description left">
-            <p class="smaller-font">Hey, I'm Jonas Wesselius.</p>
-            <h1>A Front End Developer Student, I enjoy designing and creating websites and applications.</h1>
-            <div class="buttons">
-                <a href="portfolio.html" class="portfolio-btn">Portfolio</a>
-                <a href="about.html" class="about-btn">About Me</a>
-            </div>
-        </div>
-        <div class="profile right">
-            <img src="images/ProfileImage.png" alt="Profile Image">
-        </div>
-    </section>
 
-    <section id="projects" class="projects">
-        <div class="hexagon-container">
-            <div class="hexagon">
-                <div class="hexagon-inner">
-                    <img src="images/SmartHiveLogoFinal 1.svg" alt="SmartHive Logo">
-                </div>
-            </div>
-        </div>
-        <div class="project-description right">
-            <h2>Project SmartHive</h2>
-            <div class="underline"></div>
-            <p>My most recent major project as a Front End Developer was creating an application for our product SmartHive and SmartHive Elite, a product designed to improve your environment focusing on statistics like light level, humidity, and air quality. Elite being a more premium version of a basic SmartHive.</p>
-            <a href="#" class="application-btn">Go to App</a>
-        </div>
-    </section>
-
+    <div class="title-section">
+        <h1>Learning Outcomes</h1>
+        <div class="underline"></div>
+        <p>This section provides an overview of all learning outcomes, click one of the hexagons to have a look at my development and refinement of concepts through various stages.</p>
+    </div>
     <section id="learning-outcomes" class="learning-outcomes">
-        <div class="title">
-            <h2>Learning Outcomes</h2>
-        </div>
         <div class="hexagon-grid">
             <a href="learningOutcomes/interactiveMediaProducts/mediaProducts.html">
                 <div class="hexagonLO">
