--- a/LearningOutcomes.html
+++ b/LearningOutcomes.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonas Wesselius - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="colors.css">
-    <link rel="stylesheet" href="components/footer/footer.css">
-    <link rel="stylesheet" href="components/hexagrid/hexagrid.css">
+    <link rel="stylesheet" href="style.css" rel="preload" as="style">
+    <link rel="stylesheet" href="header.css" rel="preload" as="style">
+    <link rel="stylesheet" href="colors.css" rel="preload" as="style">
+    <link rel="stylesheet" href="components/footer/footer.css" rel="preload" as="style">
+    <link rel="stylesheet" href="components/hexagrid/hexagrid.css" rel="preload" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+    <link rel="preload" href="images/LogoWhite.svg" as="image">
+    <link rel="preload" href="images/Hex.svg" as="image">
+    <link rel="preload" href="images/Logo Zwart.svg" as="image">
+    <link rel="preload" href="images/EmailIcon.svg" as="image">
+    <link rel="preload" href="images/GithubIcon.svg" as="image">
+    <link rel="preload" href="images/LinkedInIcon.svg" as="image">
+    <link rel="preload" href="images/DiscordIcon.svg" as="image">
 </head>
 <body>
     <header>
@@ -31,7 +38,6 @@
             </nav>
         </div>
     </header>
-    
 
     <div class="title-section">
         <h1>Learning Outcomes</h1>
@@ -39,43 +45,45 @@
         <p>This section provides an overview of all learning outcomes, click one of the hexagons to have a look at my development and refinement of concepts through various stages.</p>
     </div>
     <section id="learning-outcomes" class="learning-outcomes">
-        <div class="hexagon-grid">
-            <a href="learningOutcomes/interactiveMediaProducts/mediaProducts.html">
-                <div class="hexagonLO">
-                    <img src="images/Hex.svg" alt="Learning Outcome 1">
-                    <div class="hover-text">Interactive Media Products</div>
-                </div>
-            </a>
-            <a href="learningOutcomes/frontEndDevelopment/frontEnd.html">
-                <div class="hexagonLO">
-                    <img src="images/Hex.svg" alt="Learning Outcome 2">
-                    <div class="hover-text">Front-End Development</div>
-                </div>
-            </a>
-            <a href="learningOutcomes/iterativeDesign/iterative.html">
-                <div class="hexagonLO">
-                    <img src="images/Hex.svg" alt="Learning Outcome 3">
-                    <div class="hover-text">Iterative Design</div>
-                </div>
-            </a>
-            <a href="learningOutcomes/research/research.html">
-                <div class="hexagonLO">
-                    <img src="images/Hex.svg" alt="Learning Outcome 4">
-                    <div class="hover-text">Research</div>
-                </div>
-            </a>
-            <a href="learningOutcomes/communication/communication.html">
-                <div class="hexagonLO">
-                    <img src="images/Hex.svg" alt="Learning Outcome 5">
-                    <div class="hover-text">Communication</div>
-                </div>
-            </a>
-            <a href="learningOutcomes/professionalIdentity/identity.html">
-                <div class="hexagonLO">
-                    <img src="images/Hex.svg" alt="Learning Outcome 6">
-                    <div class="hover-text">Professional Identity</div>
-                </div>
-            </a>
+        <div class="hexagrid">
+            <div class="hexagon-grid">
+                <a href="learningOutcomes/interactiveMediaProducts/mediaProducts.html">
+                    <div class="hexagonLO">
+                        <img src="images/Hex.svg" alt="Learning Outcome 1">
+                        <div class="hover-text">Interactive Media Products</div>
+                    </div>
+                </a>
+                <a href="learningOutcomes/frontEndDevelopment/frontEnd.html">
+                    <div class="hexagonLO">
+                        <img src="images/Hex.svg" alt="Learning Outcome 2">
+                        <div class="hover-text">Front-End Development</div>
+                    </div>
+                </a>
+                <a href="learningOutcomes/iterativeDesign/iterative.html">
+                    <div class="hexagonLO">
+                        <img src="images/Hex.svg" alt="Learning Outcome 3">
+                        <div class="hover-text">Iterative Design</div>
+                    </div>
+                </a>
+                <a href="learningOutcomes/research/research.html">
+                    <div class="hexagonLO">
+                        <img src="images/Hex.svg" alt="Learning Outcome 4">
+                        <div class="hover-text">Research</div>
+                    </div>
+                </a>
+                <a href="learningOutcomes/communication/communication.html">
+                    <div class="hexagonLO">
+                        <img src="images/Hex.svg" alt="Learning Outcome 5">
+                        <div class="hover-text">Communication</div>
+                    </div>
+                </a>
+                <a href="learningOutcomes/professionalIdentity/identity.html">
+                    <div class="hexagonLO">
+                        <img src="images/Hex.svg" alt="Learning Outcome 6">
+                        <div class="hover-text">Professional Identity</div>
+                    </div>
+                </a>
+            </div>
         </div>
         <img src="images/Logo Zwart.svg" alt="watermark" class="watermark">
     </section>
@@ -101,6 +109,24 @@
             <div class="icon"><img src="images/DiscordIcon.svg" alt="Discord"></div>
         </div>
     </section>
-    
+
+    <script>
+        document.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', function(e) {
+                e.preventDefault();
+                const href = this.getAttribute('href');
+
+                document.body.classList.add('fade-out');
+
+                setTimeout(() => {
+                    window.location.href = href;
+                }, 300); // Match the duration of the fadeOut animation
+            });
+        });
+
+        window.addEventListener('pageshow', function() {
+            document.body.classList.add('fade-in');
+        });
+    </script>
 </body>
 </html>
