--- a/learningOutcomes/frontEndDevelopment/frontEnd.html
+++ b/learningOutcomes/frontEndDevelopment/frontEnd.html
@@ -18,7 +18,7 @@
         <div class="header-container">
             <a href="../../index.html" class="logo-link">
                 <div class="logo-container">
-                    <img src="images/LogoWhite.svg" alt="Logo" class="logo">
+                    <img src="../../images/LogoWhite.svg" alt="Logo" class="logo">
                     <span class="name">Jonas Wesselius</span>
                 </div>
             </a>
