--- a/learningOutcomes/communication/communication.html
+++ b/learningOutcomes/communication/communication.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="../../about.html">About</a></li>
                     <li><a href="../../LearningOutcomes.html">Learning Outcomes</a></li>
-                    <li><a href="../../portfolio.html" class="portfolio-btn">Portfolio</a></li>
+                    <li><a href="../../portfolio.html" class="portfolio-btn">Read more</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,7 +55,7 @@
                 <h2>Wireframes Portfolio</h2>
                 <div class="underline"></div>
                 <p>This section showcases the final design, highlighting the changes and improvements made throughout the iterative process.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Go to Portfolio</a>
+                <a href="path/to/portfolio" class="portfolio-btn">Read more</a>
             </div>
         </div>
     </div>
