--- a/learningOutcomes/iterativeDesign/iterative.html
+++ b/learningOutcomes/iterativeDesign/iterative.html
@@ -44,7 +44,7 @@
                 <h2>Wireframes Lighttown</h2>
                 <div class="underline"></div>
                 <p>These wireframes represent the initial design phase for Lighttown, laying out the basic structure and flow of the user interface.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Read more</a>
+                <a href="iterativeFurther.html" class="portfolio-btn">Read more</a>
             </div>
             <img src="./../../images/wireframes Lighttown.png" alt="Wireframes Lighttown" class="lighttownImg">
         </div>
@@ -55,7 +55,7 @@
                 <h2>Wireframes Portfolio</h2>
                 <div class="underline"></div>
                 <p>This section showcases the final design, highlighting the changes and improvements made throughout the iterative process.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Read more</a>
+                <a href="iterativeFurther.html" class="portfolio-btn">Read more</a>
             </div>
         </div>
     </div>
