--- a/LearningOutcomes.html
+++ b/LearningOutcomes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonas Wesselius - Portfolio</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
     <link rel="stylesheet" href="style.css" rel="preload" as="style">
     <link rel="stylesheet" href="header.css" rel="preload" as="style">
     <link rel="stylesheet" href="colors.css" rel="preload" as="style">
