--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonas Wesselius - Portfolio</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
     
     <!-- Preload stylesheets -->
     <link rel="preload" href="style.css" as="style">
