About me Update

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
     </section>
     
-    <div id="loading" class="loading">Loading...</div>
+    <div id="loading" class="loading"></div>
     
     <script>
         // Add event listeners to links for page transition
