--- a/about.html
+++ b/about.html
@@ -56,13 +56,13 @@
     <section id="about-me" class="about-me">
         <div class="about-me-container">
             <div class="about-me-left">
-                <img src="images/aboutMePic.png" alt="Jonas Wesselius" class="about-me-picture">
+                <img src="images/portraitProfessionalFinal.jpg" alt="Jonas Wesselius" class="about-me-picture">
             </div>
             <div class="about-me-right">
                 <h2>About Me</h2>
                 <div class="underline"></div>
-                <p>My most recent major project as a Front End Developer was creating an application for our product SmartHive and SmartHive Elite, a product designed to improve your environment focusing on statistics like lightlevel, humidity and air quality. Elite being a more premium version of a basic SmartHive. 
-                </p>            
+              <p>Hello! I'm Jonas Wesselius, a Computer Science student at Fontys University of Applied Sciences in Eindhoven. My passion for technology and innovation drives me to explore the world of software development and computer systems. At Fontys, I'm honing my skills in programming, designing, and problem-solving, preparing myself for a future in the tech industry. I'm eager to apply my knowledge and creativity to real-world challenges and contribute to the exciting advancements in the field of computer science.
+              </p>         
             </div>
         </div>
     </section>
@@ -78,7 +78,7 @@
         <div class="project-description right">
             <h2>Hobby’s</h2>
             <div class="underline"></div>
-            <p>My most recent major project as a Front End Developer was creating an application for our product SmartHive and SmartHive Elite, a product designed to improve your environment focusing on statistics like light level, humidity, and air quality. Elite being a more premium version of a basic SmartHive.</p>
+            <p>For my hobby’s I like gaming, drawing, listening to music and being physically active, I used to run a lot of obstacle courses called “Viking Runs”, I even ran some competive runs with professionals. Aside from that I like football and playing with my dog.</p>
         </div>
     </section>
 
@@ -86,7 +86,7 @@
         <div class="project-description left">
             <h2>Education</h2>
             <div class="underline"></div>
-            <p>My most recent major project as a Front End Developer was creating an application for our product SmartHive and SmartHive Elite, a product designed to improve your environment focusing on statistics like light level, humidity, and air quality. Elite being a more premium version of a basic SmartHive.</p>
+            <p> After completing HAVO, I pursued Communication & Multimedia Design but found it too focused on arts and crafts. I enjoyed coding, which led me to switch to Computer Science. Despite facing challenges with Java and MySQL, I found my path with an Associate Degree at Fontys, a two-year program that aligns with my goal of entering the workforce sooner. </p>
         </div>
         <div class="hexagon-container">
             <div class="hexagon inverted-hexagon">
