--- a/learningOutcomes/research/research.html
+++ b/learningOutcomes/research/research.html
@@ -45,7 +45,7 @@
                 <h2>Wireframes Lighttown</h2>
                 <div class="underline"></div>
                 <p>These wireframes represent the initial design phase for Lighttown, laying out the basic structure and flow of the user interface.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Go to Portfolio</a>
+                <a href="researchfurther.html" class="portfolio-btn">Read more</a>
             </div>
             <img src="./../../images/wireframes Lighttown.png" alt="Wireframes Lighttown" class="lighttownImg">
         </div>
@@ -56,7 +56,7 @@
                 <h2>Wireframes Portfolio</h2>
                 <div class="underline"></div>
                 <p>This section showcases the final design, highlighting the changes and improvements made throughout the iterative process.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Go to Portfolio</a>
+                <a href="researchfurther.html" class="portfolio-btn">Read more</a>
             </div>
         </div>
     </div>
