Big Update Learning Outcome content
Added almost all content except for front end

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li><a href="about.html">About</a></li>
                     <li><a href="LearningOutcomes.html">Learning Outcomes</a></li>
-                    <li><a href="portfolio.html" class="portfolio-btn">Portfolio</a></li>
+                    <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
         </div>
