--- a/learningOutcomes/iterativeDesign/iterativeFurther.html
+++ b/learningOutcomes/iterativeDesign/iterativeFurther.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="../../about.html">About</a></li>
                     <li><a href="../../LearningOutcomes.html">Learning Outcomes</a></li>
-                    <li><a href="../../portfolio.html" class="portfolio-btn">Portfolio</a></li>
+                    <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
         </div>
@@ -48,7 +48,7 @@
     <div class="title-section">
         <img src="../../images/Logo Zwart.svg" alt="Watermark" class="watermarkLO">
         <h1>Iterative Design in detail</h1>
-        <div class="underlines"></div>
+        <div class="underline"></div>
         <p>This is where you will find everything I’ve made for the learning outcome iterative design this semester, in greater detail.</p>
     </div>
     <div class="sectionParent">
