--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li class="current-page"><a href="about.html">About</a></li>
                     <li><a href="LearningOutcomes.html">Learning Outcomes</a></li>
-                    <li><a href="portfolio.html" class="portfolio-btn">Portfolio</a></li>
+                    <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
         </div>
