--- a/learningOutcomes/professionalIdentity/identity.html
+++ b/learningOutcomes/professionalIdentity/identity.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="professional.css">
+    <link rel="stylesheet" href="../further.css">
     <link rel="stylesheet" href="../../colors.css">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../header.css">
     <link rel="stylesheet" href="../../components/footer/footer.css">
+    <link rel="stylesheet" href="../../components/carousel/carousel.css">
+    <link rel="stylesheet" href="../../components/subheader/subheader.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Iterative Design</title>
+    <title>Professional Identity in detail</title>
     <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon.ico">
 </head>
 <body>
@@ -27,36 +30,32 @@
                 <ul>
                     <li><a href="../../about.html">About</a></li>
                     <li><a href="../../LearningOutcomes.html">Learning Outcomes</a></li>
-                    <li><a href="../../portfolio.html" class="portfolio-btn">Portfolio</a></li>
+                    <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+    <header class="section-navigation">
+        <nav>
+            <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="title-section">
         <img src="../../images/Logo Zwart.svg" alt="Watermark" class="watermarkLO">
-        <h1>Professional Identity</h1>
+        <h1>Professional Identity in detail</h1>
         <div class="underline"></div>
-        <p>This section provides an overview of the iterative design process, showcasing the development and refinement of concepts through various stages.</p>
+        <p>This is where you will find everything I’ve done for the learning outcome professional Identity this semester, in greater detail.</p>
     </div>
     <div class="sectionParent">
+        <div class="anchor" id="Portfolio"></div>
         <div class="section">
-            <div class="text-content">
-                <h2>Wireframes Lighttown</h2>
+            <div class="further-detail">
+                <h2>Portfolio</h2>
                 <div class="underline"></div>
-                <p>These wireframes represent the initial design phase for Lighttown, laying out the basic structure and flow of the user interface.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Read more</a>
-            </div>
-            <img src="./../../images/wireframes Lighttown.png" alt="Wireframes Lighttown" class="lighttownImg">
-        </div>
-
-        <div class="section reverse-section">
-            <img src="./../../images/wireframes Portfolio.png" alt="Another Image" class="altImg">
-            <div class="text-content">
-                <h2>Wireframes Portfolio</h2>
-                <div class="underline"></div>
-                <p>This section showcases the final design, highlighting the changes and improvements made throughout the iterative process.</p>
-                <a href="path/to/portfolio" class="portfolio-btn">Read more</a>
+                <p>In class, we learned about Affinity Mapping, a method for organizing research on a specific topic. Initially, we had a group assignment where the entire class analyzed the popular website "bol.com." Each student wrote down tips and tops for the website, which we then combined onto a whiteboard to create our first affinity map. This exercise helped us understand the website's strengths and weaknesses from various perspectives.</p>
+                <p> Later, we split into our project groups and repeated the process for different websites. This allowed us to apply the Affinity Mapping technique in smaller teams, fostering collaboration and deeper insights into each website's user experience and design elements.</p>
             </div>
         </div>
     </div>
@@ -81,5 +80,7 @@
             <div class="icon"><img src="./../../images/DiscordIcon.svg" alt="Discord"></div>
         </div>
     </section>
+    <script src="../../components/carousel/carousel.js"></script>
+    <script src="../../components/subheader/subheader.js"></script>
 </body>
 </html>
