--- a/learningOutcomes/professionalIdentity/identity.html
+++ b/learningOutcomes/professionalIdentity/identity.html
@@ -54,9 +54,12 @@
             <div class="further-detail">
                 <h2>Portfolio</h2>
                 <div class="underline"></div>
-                <p>In class, we learned about Affinity Mapping, a method for organizing research on a specific topic. Initially, we had a group assignment where the entire class analyzed the popular website "bol.com." Each student wrote down tips and tops for the website, which we then combined onto a whiteboard to create our first affinity map. This exercise helped us understand the website's strengths and weaknesses from various perspectives.</p>
-                <p> Later, we split into our project groups and repeated the process for different websites. This allowed us to apply the Affinity Mapping technique in smaller teams, fostering collaboration and deeper insights into each website's user experience and design elements.</p>
+                <p>This is my portfolio, where I showcase my journey and development in interactive media design. This collection of work embodies my professional identity, shaped by practical experiences and collaborative projects.</p>
+                <p>One significant learning experience was through Affinity Mapping, a method we explored in class. Initially, we analyzed "bol.com" collectively, identifying its strengths and weaknesses. Each contribution was integral to creating our first affinity map, highlighting diverse perspectives in UX evaluation.</p>
+                <p>Subsequently, working in project groups allowed me to apply Affinity Mapping to various websites. This iterative process deepened my insights into user experience and design principles, underscoring the value of collaborative ideation and iterative design.</p>
+                <p>Throughout this portfolio, you will find projects that illustrate these principles in action. From developing functional websites to crafting effective content strategies and establishing cohesive branding, each project reflects my commitment to delivering impactful and user-centric solutions.</p>
             </div>
+            
         </div>
     </div>
     <section id="contact" class="footer">
