Header and Footer update

--- a/about.html
+++ b/about.html
@@ -45,7 +45,17 @@
             <nav>
                 <ul>
                     <li class="current-page"><a href="about.html">About</a></li>
-                    <li><a href="LearningOutcomes.html">Learning Outcomes</a></li>
+                    <li class="dropdown">
+                        <a href="LearningOutcomes.html">Learning Outcomes</a>
+                        <div class="dropdown-content">
+                            <a href="learningOutcomes/interactiveMediaProducts/mediaProducts.html">Interactive Media Products</a>
+                            <a href="learningOutcomes/frontEndDevelopment/frontEnd.html">Front-End Development</a>
+                            <a href="learningOutcomes/iterativeDesign/iterativeFurther.html">Iterative Design</a>
+                            <a href="learningOutcomes/research/research.html">Research</a>
+                            <a href="learningOutcomes/communication/communication.html">Communication</a>
+                            <a href="learningOutcomes/professionalIdentity/identity.html">Professional Identity</a>
+                        </div>
+                    </li>
                     <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
@@ -103,17 +113,29 @@
         <div class="quick-links">
             <a href="#" class="heading">Navigation</a> 
             <a href="#" class="heading">Projects</a>
-            <a href="#">About</a>
-            <a href="#">SmartHive</a> 
-            <a href="#">Contact</a> 
-            <a href="#">Eindhoven Rockcity</a>
-            <a href="#">Portfolio</a>
-            <a href="#">LightTown Speakers</a>
+            <a href="about.html">About</a>
+            <a href="https://github.com/JonasWesselius/SmartHive">SmartHive</a> 
+            <a href="LearningOutcomes.html">LO's</a> 
+            <a href="https://www.eindhovenrockcity.nl/">Eindhoven Rockcity</a>
+            <a href="/pdfs/CV van Jonas Wesselius 2021.pdf">CV</a>
+            <a href="https://toastmasters.nl/en/tm-clubs/lighttown-speakers">LightTown Speakers</a>
         </div>
         <div class="social-icons">
-            <div class="icon"><img src="images/EmailIcon.svg" alt="Email"></div>
-            <div class="icon"><img src="images/GithubIcon.svg" alt="Github"></div>
-            <div class="icon"><img src="images/LinkedInIcon.svg" alt="LinkedIn"></div>
+            <div class="icon">
+                <a href="mailto:jonassuswesselius@gmail.com" target="_blank" rel="noopener">
+                    <img src="images/EmailIcon.svg" alt="Email">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://github.com/JonasWesselius" target="_blank" rel="noopener">
+                    <img src="images/GithubIcon.svg" alt="Github">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://www.linkedin.com/in/jonas-wesselius-42755829b/" target="_blank" rel="noopener">
+                    <img src="images/LinkedInIcon.svg" alt="LinkedIn">
+                </a>
+            </div>
             <div class="icon"><img src="images/DiscordIcon.svg" alt="Discord"></div>
         </div>
     </section>
