--- a/portfolio.html
+++ b/portfolio.html
@@ -106,17 +106,29 @@
         <div class="quick-links">
             <a href="#" class="heading">Navigation</a> 
             <a href="#" class="heading">Projects</a>
-            <a href="#">About</a>
-            <a href="#">SmartHive</a> 
-            <a href="#">Contact</a> 
-            <a href="#">Eindhoven Rockcity</a>
-            <a href="#">Portfolio</a>
-            <a href="#">LightTown Speakers</a>
+            <a href="about.html">About</a>
+            <a href="https://github.com/JonasWesselius/SmartHive">SmartHive</a> 
+            <a href="LearningOutcomes.html">LO's</a> 
+            <a href="https://www.eindhovenrockcity.nl/">Eindhoven Rockcity</a>
+            <a href="/pdfs/CV van Jonas Wesselius 2021.pdf">CV</a>
+            <a href="https://toastmasters.nl/en/tm-clubs/lighttown-speakers">LightTown Speakers</a>
         </div>
         <div class="social-icons">
-            <div class="icon"><img src="images/EmailIcon.svg" alt="Email"></div>
-            <div class="icon"><img src="images/GithubIcon.svg" alt="Github"></div>
-            <div class="icon"><img src="images/LinkedInIcon.svg" alt="LinkedIn"></div>
+            <div class="icon">
+                <a href="mailto:jonassuswesselius@gmail.com" target="_blank" rel="noopener">
+                    <img src="images/EmailIcon.svg" alt="Email">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://github.com/JonasWesselius" target="_blank" rel="noopener">
+                    <img src="images/GithubIcon.svg" alt="Github">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://www.linkedin.com/in/jonas-wesselius-42755829b/" target="_blank" rel="noopener">
+                    <img src="images/LinkedInIcon.svg" alt="LinkedIn">
+                </a>
+            </div>
             <div class="icon"><img src="images/DiscordIcon.svg" alt="Discord"></div>
         </div>
     </section>
