--- a/learningOutcomes/iterativeDesign/iterative.html
+++ b/learningOutcomes/iterativeDesign/iterative.html
@@ -26,7 +26,17 @@
             <nav>
                 <ul>
                     <li><a href="../../about.html">About</a></li>
-                    <li><a href="../../LearningOutcomes.html">Learning Outcomes</a></li>
+                    <li class="dropdown">
+                        <a href="../../LearningOutcomes.html">Learning Outcomes</a>
+                        <div class="dropdown-content">
+                            <a href="../interactiveMediaProducts/mediaProducts.html">Interactive Media Products</a>
+                            <a href="../frontEndDevelopment/frontEnd.html">Front-End Development</a>
+                            <a href="../iterativeDesign/iterativeFurther.html">Iterative Design</a>
+                            <a href="../research/research.html">Research</a>
+                            <a href="../communication/communication.html">Communication</a>
+                            <a href="../professionalIdentity/identity.html">Professional Identity</a>
+                        </div>
+                    </li>
                     <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
@@ -62,23 +72,35 @@
     </div>
     <section id="contact" class="footer">
         <div class="logoFooter">
-            <img src="./../../images/LogoWhite.svg" alt="Logo">
+            <img src="../../images/LogoWhite.svg" alt="Logo">
         </div>
         <div class="quick-links">
             <a href="#" class="heading">Navigation</a> 
             <a href="#" class="heading">Projects</a>
-            <a href="#">About</a>
-            <a href="#">SmartHive</a> 
-            <a href="#">Contact</a> 
-            <a href="#">Eindhoven Rockcity</a>
-            <a href="#">Portfolio</a>
-            <a href="#">LightTown Speakers</a>
+            <a href="../../about.html">About</a>
+            <a href="https://github.com/JonasWesselius/SmartHive" target="_blank">SmartHive</a> 
+            <a href="../../LearningOutcomes.html">LO's</a> 
+            <a href="https://www.eindhovenrockcity.nl/" target="_blank">Eindhoven Rockcity</a>
+            <a href="../../pdfs/CV van Jonas Wesselius 2021.pdf" target="_blank">CV</a>
+            <a href="https://toastmasters.nl/en/tm-clubs/lighttown-speakers" target="_blank">LightTown Speakers</a>
         </div>
         <div class="social-icons">
-            <div class="icon"><img src="./../../images/EmailIcon.svg" alt="Email"></div>
-            <div class="icon"><img src="./../../images/GithubIcon.svg" alt="Github"></div>
-            <div class="icon"><img src="./../../images/LinkedInIcon.svg" alt="LinkedIn"></div>
-            <div class="icon"><img src="./../../images/DiscordIcon.svg" alt="Discord"></div>
+            <div class="icon">
+                <a href="mailto:jonassuswesselius@gmail.com" target="_blank" rel="noopener">
+                    <img src="../../images/EmailIcon.svg" alt="Email">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://github.com/JonasWesselius" target="_blank" rel="noopener">
+                    <img src="../../images/GithubIcon.svg" alt="Github">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://www.linkedin.com/in/jonas-wesselius-42755829b/" target="_blank" rel="noopener">
+                    <img src="../../images/LinkedInIcon.svg" alt="LinkedIn">
+                </a>
+            </div>
+            <div class="icon"><img src="../../images/DiscordIcon.svg" alt="Discord"></div>
         </div>
     </section>
 </body>
