--- a/learningOutcomes/research/research.html
+++ b/learningOutcomes/research/research.html
@@ -29,12 +29,23 @@
             <nav>
                 <ul>
                     <li><a href="../../about.html">About</a></li>
-                    <li><a href="../../LearningOutcomes.html">Learning Outcomes</a></li>
+                    <li class="dropdown">
+                        <a href="../../LearningOutcomes.html">Learning Outcomes</a>
+                        <div class="dropdown-content">
+                            <a href="../interactiveMediaProducts/mediaProducts.html">Interactive Media Products</a>
+                            <a href="../frontEndDevelopment/frontEnd.html">Front-End Development</a>
+                            <a href="../iterativeDesign/iterativeFurther.html">Iterative Design</a>
+                            <a href="../research/research.html">Research</a>
+                            <a href="../communication/communication.html">Communication</a>
+                            <a href="../professionalIdentity/identity.html">Professional Identity</a>
+                        </div>
+                    </li>
                     <li><a href="/pdfs/CV van Jonas Wesselius 2021.pdf" class="portfolio-btn" target="_blank">My CV</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
     <header class="section-navigation">
         <nav>
             <ul>
@@ -140,7 +151,7 @@
                     <p>This practical application of Affinity Mapping provided valuable insights into the user experience from the perspective of actual users. We discovered key areas that needed enhancement, such as improving ease of use, creating a separate website for clarity, and making the website more visually appealing. This direct feedback was instrumental in guiding our design decisions and ensuring that the final product met the needs and expectations of the Lighttown Speakers members.</p>
             </div>
             <div class="carousel-container" id="carousel3">
-                <h3>Project Steps</h3>
+                <h3>Research Steps</h3>
                 <div class="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -219,23 +230,35 @@
     </div>
     <section id="contact" class="footer">
         <div class="logoFooter">
-            <img src="./../../images/LogoWhite.svg" alt="Logo">
+            <img src="../../images/LogoWhite.svg" alt="Logo">
         </div>
         <div class="quick-links">
             <a href="#" class="heading">Navigation</a> 
             <a href="#" class="heading">Projects</a>
-            <a href="#">About</a>
-            <a href="#">SmartHive</a> 
-            <a href="#">Contact</a> 
-            <a href="#">Eindhoven Rockcity</a>
-            <a href="#">Portfolio</a>
-            <a href="#">LightTown Speakers</a>
+            <a href="../../about.html">About</a>
+            <a href="https://github.com/JonasWesselius/SmartHive" target="_blank">SmartHive</a> 
+            <a href="../../LearningOutcomes.html">LO's</a> 
+            <a href="https://www.eindhovenrockcity.nl/" target="_blank">Eindhoven Rockcity</a>
+            <a href="../../pdfs/CV van Jonas Wesselius 2021.pdf" target="_blank">CV</a>
+            <a href="https://toastmasters.nl/en/tm-clubs/lighttown-speakers" target="_blank">LightTown Speakers</a>
         </div>
         <div class="social-icons">
-            <div class="icon"><img src="./../../images/EmailIcon.svg" alt="Email"></div>
-            <div class="icon"><img src="./../../images/GithubIcon.svg" alt="Github"></div>
-            <div class="icon"><img src="./../../images/LinkedInIcon.svg" alt="LinkedIn"></div>
-            <div class="icon"><img src="./../../images/DiscordIcon.svg" alt="Discord"></div>
+            <div class="icon">
+                <a href="mailto:jonassuswesselius@gmail.com" target="_blank" rel="noopener">
+                    <img src="../../images/EmailIcon.svg" alt="Email">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://github.com/JonasWesselius" target="_blank" rel="noopener">
+                    <img src="../../images/GithubIcon.svg" alt="Github">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://www.linkedin.com/in/jonas-wesselius-42755829b/" target="_blank" rel="noopener">
+                    <img src="../../images/LinkedInIcon.svg" alt="LinkedIn">
+                </a>
+            </div>
+            <div class="icon"><img src="../../images/DiscordIcon.svg" alt="Discord"></div>
         </div>
     </section>
     <script src="../../components/carousel/carousel.js"></script>
