--- a/learningOutcomes/frontEndDevelopment/frontEnd.html
+++ b/learningOutcomes/frontEndDevelopment/frontEnd.html
@@ -34,7 +34,7 @@
                         <div class="dropdown-content">
                             <a href="../interactiveMediaProducts/mediaProducts.html">Interactive Media Products</a>
                             <a href="../frontEndDevelopment/frontEnd.html">Front-End Development</a>
-                            <a href="../iterativeDesign/iterativeFurther.html">Iterative Design</a>
+                            <a href="../iterativeDesign/iterative.html">Iterative Design</a>
                             <a href="../research/research.html">Research</a>
                             <a href="../communication/communication.html">Communication</a>
                             <a href="../professionalIdentity/identity.html">Professional Identity</a>
@@ -71,6 +71,7 @@
                 <p>Utilizing HTML, CSS, and JavaScript, I crafted a compelling landing page that served as the gateway to Lighttown Speakers' online presence. This included structuring content with HTML to ensure clarity and accessibility, styling elements with CSS to create a visually engaging interface, and integrating JavaScript functionalities for enhanced user interaction.</p>
                 <p>For instance, I implemented JavaScript to dynamically toggle language options on the site, although this isn't functional yet, the layout is there, it just needs the translation logic. Additionally, I utilized CSS grid systems and flexbox layouts to create responsive designs, ensuring optimal viewing experiences across various devices.</p>
                 <p>Throughout the development process, I maintained a keen eye for detail, ensuring that design elements were not only aesthetically pleasing but also aligned with Lighttown Speakers' branding and user experience goals. This comprehensive approach is reflected in the cohesive and functional nature of the final website.</p>
+                <p>Developing the Lighttown Speakers website taught me valuable lessons in web development, particularly the importance of balancing aesthetics with functionality. The experience reinforced my skills in HTML, CSS, and JavaScript, and highlighted the necessity of creating responsive and user-friendly designs. Additionally, this project emphasized the importance of aligning web design with branding and user experience objectives, ensuring that the final product effectively represents the client's vision and meets user needs.</p>
                 <p>For a deeper look into the code and design decisions behind the Lighttown Speakers website, please explore the repository linked below:</p>
             </div>
             <div class="carousel-container" id="carousel1">
@@ -112,8 +113,9 @@
                 <p>Throughout my journey in front-end development, I crafted a dynamic portfolio that serves as a testament to my growth and proficiency in HTML, CSS, and JavaScript.</p>
                 <p>The portfolio incorporates several key elements that highlight my skills. For instance, I designed CSS hexagons and accordions to present information in an organized and visually appealing manner. These components not only showcase my ability to create complex layouts but also demonstrate my attention to detail in user interface design.</p>
                 <p>Integrating embedded videos directly into the portfolio further underscores my capability to seamlessly incorporate multimedia content using HTML. This enriches user experience and provides a comprehensive overview of my projects and achievements.</p>
-                <p>In addition, I implemented root colour variables in the CSS stylesheet, facilitating easy customization and maintenance of the portfolio's visual style. This approach ensures consistency and enables swift adjustments across the entire site.</p>
+                <p>In addition, I implemented root color variables in the CSS stylesheet, facilitating easy customization and maintenance of the portfolio's visual style. This approach ensures consistency and enables swift adjustments across the entire site.</p>
                 <p>By leveraging these technologies and design principles, I aimed to develop a professional and interactive portfolio that not only showcases my work but also reflects my evolving skills and capabilities in front-end development.</p>
+                <p>Creating my portfolio taught me the importance of combining aesthetic design with functional usability. I learned how to create visually appealing layouts using CSS and how to enhance user experience with interactive JavaScript elements. Additionally, the use of root color variables highlighted the significance of maintainable and scalable design practices. This project reinforced my ability to present my work effectively and adapt to new design challenges, demonstrating my continuous growth in front-end development.</p>
             </div>            
             <div class="carousel-container" id="carousel2">
                 <h3>Code Examples</h3>
@@ -162,6 +164,7 @@
                 <p>Using the React ecosystem, I utilized components to maintain a structured and modular approach, ensuring the archive's scalability and maintainability. This approach also allowed me to dynamically fetch and display Pokemon data from an external API, showcasing my proficiency in integrating APIs into React applications.</p>
                 <p>The project underscored the importance of performance optimization, particularly evident in the lazy loading feature I implemented using react-intersection-observer to load Pokemon images as they come into view.</p>
                 <p>Overall, the SprintX Project not only reinforced my frontend development skills but also deepened my appreciation for React's capabilities in creating interactive and data-driven web applications. This experience solidified my ambition to pursue a career in frontend development, using my skills and knowledge gained from this project.</p>
+                <p>Working on the SprintX Project taught me the importance of state management, component-based architecture, and performance optimization in React. I learned how to effectively use useState hooks to manage state and how to structure a React application for scalability and maintainability. Additionally, integrating an external API and implementing lazy loading enhanced my understanding of creating efficient, data-driven applications. This project solidified my confidence in using React and highlighted its potential for building sophisticated web applications, reinforcing my goal to specialize in frontend development.</p>
             </div>
             
             <div class="carousel-container" id="carousel3">
@@ -210,7 +213,8 @@
                 <p>During the Lighttown project, for instance, I took the lead in introducing GitHub to my partner, who had no prior experience with the platform. I guided them through the basics, including branching strategies and using features like squashing commits and merging branches into the main repository. This approach allowed us to work concurrently on different parts of the project without conflicts, maintaining code integrity throughout.</p>
                 <p>We adopted a disciplined approach to version control by adding descriptive comments to commits, providing clarity on the changes made and their purpose. This practice not only aided in project organization but also facilitated smooth communication and collaboration between team members.</p>
                 <p>Additionally, I integrated Netlify into my repositories to automate deployment. By linking Netlify to the main branch of our repository, any commit pushed to the main branch instantly updated the live website. This integration streamlined our workflow, ensuring that our latest changes were always reflected on the deployed site without manual intervention.</p>
-            </div>            
+                <p>Using GitHub taught me the importance of effective version control and collaboration strategies in software development. I learned how to manage and merge branches efficiently, ensuring that team members could work concurrently without conflicts. Introducing GitHub to my partner improved my ability to communicate technical concepts and fostered a collaborative working environment. Additionally, integrating Netlify for automated deployment emphasized the value of continuous integration and delivery, ensuring that our latest changes were always live and reducing the risk of deployment errors.</p>
+            </div>          
             <div class="carousel-container" id="carousel4">
                 <h3>Github Screenshots</h3>
                 <div class="carousel">
