--- a/learningOutcomes/interactiveMediaProducts/mediaProducts.html
+++ b/learningOutcomes/interactiveMediaProducts/mediaProducts.html
@@ -327,7 +327,16 @@
             <div class="further-detail">
                 <h2>Pokemon Archive</h2>
                 <div class="underline"></div>
-                <p>WIP</p>
+                <p>The Pokemon Archive project has been a major steppingstone in learning more about interactive media products. It allowed me to dive deep into front-end development using React.js and integrating APIs to bring dynamic Pokemon data to life. Building a user-friendly interface challenged me to consider usability and visual appeal, refining my skills in creating engaging digital experiences.</p>
+                <p>Through this project, I've learned firsthand about the iterative process of design and development. Each stage, from prototyping to user testing, was crucial in improving functionality and ensuring a seamless user experience. It's been rewarding to see how technical skills can directly impact user engagement and satisfaction.</p>
+                <p>This experience has reinforced my passion for crafting meaningful digital solutions and deepened my understanding of interactive media design principles. It's prepared me to tackle more complex projects and adapt to evolving industry standards, empowering me to contribute effectively in future roles.</p>
+            </div>
+            <div class="video-container-wide">
+                <h3>Pokemon Archive Iteration 1 Test</h3>
+                <video controls width="100%">
+                    <source src="../../videos/PATest.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </div>
