--- a/learningOutcomes/professionalIdentity/identity.html
+++ b/learningOutcomes/professionalIdentity/identity.html
@@ -49,6 +49,8 @@
         <nav>
             <ul>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#intern">Intern Assignment</a></li>
+                <li><a href="#reflection">Reflection</a></li>
             </ul>
         </nav>
     </header>
@@ -59,7 +61,7 @@
         <p>This is where you will find everything I’ve done for the learning outcome professional Identity this semester, in greater detail.</p>
     </div>
     <div class="sectionParent">
-        <div class="anchor" id="Portfolio"></div>
+        <div class="anchor" id="portfolio"></div>
         <div class="section">
             <div class="further-detail">
                 <h2>Portfolio</h2>
@@ -68,10 +70,46 @@
                 <p>One significant learning experience was through Affinity Mapping, a method we explored in class. Initially, we analyzed "bol.com" collectively, identifying its strengths and weaknesses. Each contribution was integral to creating our first affinity map, highlighting diverse perspectives in UX evaluation.</p>
                 <p>Subsequently, working in project groups allowed me to apply Affinity Mapping to various websites. This iterative process deepened my insights into user experience and design principles, underscoring the value of collaborative ideation and iterative design.</p>
                 <p>Throughout this portfolio, you will find projects that illustrate these principles in action. From developing functional websites to crafting effective content strategies and establishing cohesive branding, each project reflects my commitment to delivering impactful and user-centric solutions.</p>
-            </div>
-            
+            </div>            
         </div>
     </div>
+    <div class="sectionParent">
+        <div class="anchor" id="intern"></div>
+        <div class="section">
+            <div class="further-detail">
+                <h2> Intern Assignment</h2>
+                <div class="underline"></div>
+                <p>During this assignment, I explored the job market for two specific roles within my profile: Front-end Developer and UX Designer. I reviewed 10 job postings for each role and distilled five key points that frequently appeared in these postings. This exercise helped me understand the common requirements and expectations for these roles, such as the focus on team collaboration, flexible work hours, and opportunities for growth.</p>
+                <p>For Front-end Developer positions, I noticed an emphasis on working with HTML, CSS, JavaScript, and frameworks like React. The UX Designer roles highlighted the importance of user research, prototyping, and designing intuitive interfaces. I found the Front-end Developer role particularly appealing because it combines technical skills with creativity, allowing me to work on the visual and interactive aspects of web development. I enjoy working with web technologies and constantly learning new things, which aligns well with the dynamic nature of this role.</p>
+                <p>Next, I compared these findings with the function profile descriptions provided in the course material. I found several overlaps, such as the focus on teamwork, remote working opportunities, and flexible schedules. However, I also identified areas where I need to improve, such as gaining experience with Scrum and Azure, which are essential for both roles but were not emphasized in the job postings I reviewed.</p>
+                <p>I then searched for internships that align with the Front-end Developer profile. I identified two potential internships where I could work with React and JavaScript, focusing on coding and design. These internships appealed to me because they offer practical experience in technologies I'm passionate about and align with my career goals.</p>
+                <p>Finally, I created a video presentation where I discussed my preference for the Front-end Developer role and explained the differences between Bachelor and Associate Degree students. I learned that while both degrees require a solid understanding of core concepts, Associate Degree students need to be more focused on practical skills and direct application in the workplace.</p>
+                <p>This assignment has deepened my understanding of the specific skills and knowledge required for my desired roles. It has also highlighted the importance of continuous learning and adapting to industry needs. I feel more confident in my career path and am motivated to further develop my skills in interactive media design.</p>
+                <div class="center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/y11SbvNGP7E?si=uVIB9LA6puL97qz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>  
+            </div> 
+            <a href="../../pdfs/Intern Assignment.pdf" class="further-btn" target="_blank">View PDF</a>    
+        </div>
+    </div>
+    <div class="sectionParent">
+        <div class="anchor" id="reflection"></div>
+        <div class="section">
+            <div class="further-detail">
+                <h2>Semester Reflection</h2>
+                <div class="underline"></div>
+                <p>This semester has been a big step in my development as an front-end developer. Through various projects and practical experiences, I've gained a deeper understanding of the field and honed my skills significantly.</p>
+                <p>One of the major learning experiences was through our Affinity Mapping exercises. In class, we collectively analyzed the website "bol.com," identifying its strengths and weaknesses. This collaborative effort was my first encounter with Affinity Mapping, helping me appreciate diverse perspectives in UX evaluation. Later, applying this technique in smaller project groups allowed me to delve deeper into user experience and design principles. Gathering and organizing user feedback became a vital part of my design process, as seen in our work with Lighttown Speakers.</p>
+                <p>Developing the brand guide and content strategy for RockCity was another highlight. I learned the importance of maintaining a consistent brand identity and the strategic use of various media platforms to engage with the target audience. This project emphasized the need for clear objectives and a thorough understanding of the audience to create effective content strategies.</p>
+                <p>The Lighttown Speakers project was a test of my project management and presentation skills. Stepping up to create a last-minute presentation under tight deadlines taught me how to work efficiently under pressure and deliver professional results. This experience underscored the importance of adaptability and readiness in any project environment.</p>
+                <p>Prototyping and iterative design were crucial aspects of my learning. Creating a paper prototype for a sidescroller game and developing wireframes for the Lighttown Speakers website highlighted the value of iterative design. Continuous feedback loops and multiple iterations helped me refine designs and improve usability and visual appeal. This approach was also integral to developing my portfolio, where feedback, al be it by teacher or by fellow student, played a key role in achieving a polished final product.</p>
+                <p>Through AI research for RockCity, I researched the potential of advanced technology to break down language barriers and enhance communication. Evaluating AI translation tools taught me how to choose the right technological solutions and the importance of cultural sensitivity in translation work.</p>
+                <p>Working on the Pokémon archive project was particularly enjoyable as it allowed me to combine my passion for Pokémon with the skills I’ve been developing. Using React.js to create an intuitive interface and working with APIs to fetch and display data was both challenging and rewarding. I wish I had more than just three weeks to polish it further, as it was a project I was truly passionate about and saw great potential in.</p>
+                <p>Overall, this semester has been about integrating technical skills with strategic thinking and user-centered design principles. Each project has contributed to an understanding of interactive media design and front-end development, preparing me for future challenges in the field. I am excited to further develop these skills and continuously improve myself as a developer.</p>           
+            </div>           
+        </div>
+    </div>
+    
     <section id="contact" class="footer">
         <div class="logoFooter">
             <img src="../../images/LogoWhite.svg" alt="Logo">
